Squashed commit of the following:
commit 531992270fa4c1d8ea1fbd87424c44f452d0d730
Author: yamato <82579341+yamato-1205@users.noreply.github.com>
Date:   Tue Dec 12 20:15:01 2023 +0900

    messageをフロントへ返すときのデータ型を変更 (#56)

    * ページネーションの作成

    * messageをフロントへ返すときにデータ型を変更
