# app/controllers/messages_controller.rb
@@ -4,8 +4,24 @@ class MessagesController < ApplicationController
 
   def index
     params = index_params
-    messages = Room.find(params[:room_id]).messages
-    render status: 200, json: messages, each_serializer: MessageSerializer
+    messages = Room.find(params[:room_id]).messages.order("created_at DESC").page(params[:page]).per(20)
+    if messages.blank?
+      render status: 200, json: messages
+      return
+    end
+
+    each_message = messages.map { |p| p.attributes.symbolize_keys }
+
+    messages.each_with_index do |message, i|
+      reactions = Reaction.where(message_id: message["id"]).order(name: :desc)
+      each_message[i].store(:reactions, reactions)
+      user = User.select(:id, :name, :email, :image).find(message["user_id"])
+      each_message[i].store(:user, user)
+      each_message[i].delete(:user_id)
+    end
+
+    render status: 200, json: { 'messages' => each_message }, each_serializer: MessageSerializer
+    # render status: 200, json: each_messages, each_serializer: MessageSerializer
   end
 
   # TODO: "./profile_controller.rb" 参照
@@ -27,7 +43,7 @@ class MessagesController < ApplicationController
   private
 
   def index_params
-    params.permit(:room_id)
+    params.permit(:room_id, :page)
   end
 
   def post_params
