# docs/openapi.yml
@@ -588,9 +588,72 @@ paths:
                   type: array
                   items:
                     $ref: "#/components/schemas/userId"
+  # index
+  /messages:
+    get:
+      tags:
+        - messages
+      operationId: index_room
+      summary: Index your rooms.
+      description: Index your rooms.
+      parameters:
+        - name: room_id
+          in: query
+          description: "room_id"
+          required: true
+          schema:
+            $ref: "#/components/schemas/roomId"
+        - name: page
+          in: query
+          description: "page"
+          required: true
+          schema:
+            $ref: "#/components/schemas/page"
 
-  # create
+      responses:
+        200:
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  messages:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          $ref: "#/components/schemas/messageId"
+                        content:
+                          $ref: "#/components/schemas/messageText"
+                        user:
+                          type: object
+                          properties:
+                            id:
+                              $ref: "#/components/schemas/userId"
+                            name:
+                              $ref: "#/components/schemas/userName"
+                            email:
+                              $ref: "#/components/schemas/userEmail"
+                            userImageUrl:
+                              $ref: "#/components/schemas/userImageUrl"
+                        roomId:
+                          $ref: "#/components/schemas/roomId"
+                        reactions:
+                          type: array
+                          items:
+                            type: object
+                            properties:
+                              name:
+                                $ref: "#/components/schemas/reactionName"
+                              userId:
+                                $ref: "#/components/schemas/userId"
+
+
+
   /reactions:
+    # create
     post:
       tags:
         - reactions
@@ -966,3 +1029,8 @@ components:
       description: name of reaction
       example: 祈り
       type: string
+
+    page:
+      description: page
+      example: 1
+      type: integer
